fix:only show streak class is streak > 0; prevent body canvas overflow

--- a/src/assets/scss/structure.scss
+++ b/src/assets/scss/structure.scss
@@ -5,6 +5,7 @@
   text-align: center;
   margin: 0 auto;
   padding: Max(3em, 10vh) 0;
+  overflow: hidden;
 }
 
 // Header
